Add support for multiple E-paper display models

--- a/ext/epaperify/Makefile
+++ b/ext/epaperify/Makefile
@@ -138,10 +138,10 @@ extout_prefix =
 target_prefix = /epaperify
 LOCAL_LIBS = -lbcm2835 -lm 
 LIBS = $(LIBRUBYARG_SHARED)  -lm   -lc
-ORIG_SRCS = DEV_Config.c EPD_2in7b_V2.c GUI_BMPfile.c GUI_Paint.c epaperify.c font12.c font12CN.c font16.c font20.c font24.c font24CN.c font8.c
+ORIG_SRCS = DEV_Config.c EPD_2in7b_V2.c EPD_5in83_V2.c EPD_5in83b_V2.c GUI_BMPfile.c GUI_Paint.c epaperify.c font12.c font12CN.c font16.c font20.c font24.c font24CN.c font8.c
 SRCS = $(ORIG_SRCS) 
-OBJS = DEV_Config.o EPD_2in7b_V2.o GUI_BMPfile.o GUI_Paint.o epaperify.o font12.o font12CN.o font16.o font20.o font24.o font24CN.o font8.o
-HDRS = $(srcdir)/EPD_2in7b_V2.h $(srcdir)/GUI_BMPfile.h $(srcdir)/DEV_Config.h $(srcdir)/extconf.h $(srcdir)/Debug.h $(srcdir)/fonts.h $(srcdir)/GUI_Paint.h
+OBJS = DEV_Config.o EPD_2in7b_V2.o EPD_5in83_V2.o EPD_5in83b_V2.o GUI_BMPfile.o GUI_Paint.o epaperify.o font12.o font12CN.o font16.o font20.o font24.o font24CN.o font8.o
+HDRS = $(srcdir)/EPD_5in83b_V2.h $(srcdir)/EPD_2in7b_V2.h $(srcdir)/GUI_BMPfile.h $(srcdir)/DEV_Config.h $(srcdir)/extconf.h $(srcdir)/Debug.h $(srcdir)/EPD_5in83_V2.h $(srcdir)/fonts.h $(srcdir)/epaperify.h $(srcdir)/GUI_Paint.h
 LOCAL_HDRS = 
 TARGET = epaperify
 TARGET_NAME = epaperify
